--- a/src/index.html
+++ b/src/index.html
@@ -23,25 +23,68 @@
 </head>
 
 <body>
+  <section class="carousel">
+    <div class="carousel-inner">
+      <article class="carousel-item">
+        <figure>
+          <img class="avatar" src="./images/image-tanya.jpg" alt="tanya">
+        </figure>
+        <div class="content__info">
+          <p>
+            “ I’ve been interested in coding for a while but never taken the jump, until now.
+            I couldn’t recommend this course enough. I’m now in the job of my dreams and so
+            excited about the future. ”
+          </p>
+          <p>Tanya Sinclair</p>
+          <p>UX Engineer</p>
+        </div>
+      </article>
+      
+      <article class="carousel-item">
+        <figure>
+          <img class="avatar" src="./images/image-john.jpg" alt="John">
+        </figure>
+        <div class="content__info">
+          <p>
+            “ If you want to lay the best foundation possible I’d recommend taking this course.
+            The depth the instructors go into is incredible. I now feel so confident about
+            starting up as a professional developer. ”
+          </p>
+          <p>John Tarkpor</p>
+          <p>Junior Front-end Developer </p>
+        </div>
+      </article>
 
-  “ I’ve been interested in coding for a while but never taken the jump, until now.
-  I couldn’t recommend this course enough. I’m now in the job of my dreams and so
-  excited about the future. ”
+      <div class="icons-container">
+        <button>
+          <img class="icons" src="./images/icon-prev.svg" alt="icon-prev">
+        </button>
+        <button>
+          <img class="icons" src="./images/icon-next.svg" alt="icon-next">
+        </button>
+      </div>
+    </div>
+  </section>
 
-  Tanya Sinclair
-  UX Engineer
 
-  “ If you want to lay the best foundation possible I’d recommend taking this course.
-  The depth the instructors go into is incredible. I now feel so confident about
-  starting up as a professional developer. ”
 
-  John Tarkpor
-  Junior Front-end Developer
 
+
+
+
+
+
+
+
+  <!-- 
+
+
+ -->
+  <!-- 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 
 </html>
