--- a/src/index.html
+++ b/src/index.html
@@ -10,48 +10,46 @@
 
   <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
 
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
   <section class="carousel">
     <div class="carousel-inner">
       <article class="carousel-item">
-        <figure>
-          <img class="avatar" src="./images/image-tanya.jpg" alt="tanya">
-        </figure>
-        <div class="content__info">
-          <p>
-            “ I’ve been interested in coding for a while but never taken the jump, until now.
-            I couldn’t recommend this course enough. I’m now in the job of my dreams and so
-            excited about the future. ”
-          </p>
-          <p>Tanya Sinclair</p>
-          <p>UX Engineer</p>
+        <div class="item-container">
+          <figure>
+            <img class="avatar" src="./images/image-tanya.jpg" alt="tanya">
+          </figure>
+          <div class="content__info">
+            <p>
+              “ I’ve been interested in coding for a while but never taken the jump, until now.
+              I couldn’t recommend this course enough. I’m now in the job of my dreams and so
+              excited about the future. ”
+            </p>
+            <p>
+              <span>Tanya Sinclair</span>
+              <span>UX Engineer</span>
+           </p>
+          </div>
         </div>
       </article>
 
       <article class="carousel-item">
-        <figure>
-          <img class="avatar" src="./images/image-john.jpg" alt="John">
-        </figure>
-        <div class="content__info">
-          <p>
-            “ If you want to lay the best foundation possible I’d recommend taking this course.
-            The depth the instructors go into is incredible. I now feel so confident about
-            starting up as a professional developer. ”
-          </p>
-          <p>John Tarkpor</p>
-          <p>Junior Front-end Developer </p>
+        <div class="item-container">
+          <figure>
+            <img class="avatar" src="./images/image-john.jpg" alt="John">
+          </figure>
+          <div class="content__info">
+            <p>
+              “ If you want to lay the best foundation possible I’d recommend taking this course.
+              The depth the instructors go into is incredible. I now feel so confident about
+              starting up as a professional developer. ”
+            </p>
+            <p>
+              <span>John Tarkpor</span>
+              <span>Junior Front-end Developer </span>
+            </p>
+          </div>
         </div>
       </article>
 
@@ -72,7 +70,7 @@
     </div>
   </section>
 
-  
+
 
 
   <script>
